@@ -208,9 +208,8 @@
 						<hr />
 						<script type="text/javascript" language="javascript" src="ajax.js?v=<?php echo mt_rand(); ?>"></script> 
 					<!-- Copyright please don't remove-->
-						<?php printf($obj->lang['footer']);?>
 						<STRONG><SPAN class='powered'>Based on <a href='https://github.com/giaythuytinh176/vinaget-script'>Vinaget 2.7.0 Final Revision <?php printf($obj->current_version); ?></a> by [FZ]<br/>
-						Rebuild code by LTT♥. Current version: <a target='_blank' href='https://bitbucket.org/ltt2801/new-vinaget-script'><?php printf($obj->ltt_version); ?></a></SPAN><br/>
+						Rebuild code by LTT♥. Current version: <a target='_blank' href='https://github.com/ltt2801/new-vinaget-script'><?php printf($obj->ltt_version); ?></a></SPAN><br/>
 						<SPAN class='copyright'>Copyright 2009-<?php echo date('Y');?> by <a href='http://vinaget.us/'>http://vinaget.us</a>. All rights reserved. </SPAN><br />
 					<!-- Copyright please don't remove-->
 					</div>
